# Job-Finder

./: .env.example  .gitignore  README.md  pyproject.toml
config/: search_profiles.yaml
docs/plans/: 2026-03-04-readme-diagram-redesign-plan.md  2026-03-04-readme-diagram-redesign.md
scripts/: capture_demo.py
src/jobfinder/: __init__.py  cli.py  config.py  logging.py  service.py  streamlit_app.py
src/jobfinder/adapters/: __init__.py  adobe.py  amazon.py  anthropic.py  apple.py  base.py  browser.py  generic_public.py  google.py  greenhouse.py  ibm.py  lever.py  linkedin_public.py  meta.py  microsoft.py  nvidia.py  openai.py  registry.py  runwayml.py  stability_ai.py  workable.py
src/jobfinder/graph/: __init__.py  state.py  workflow.py
src/jobfinder/models/: __init__.py  db.py  domain.py
src/jobfinder/reporting/: __init__.py  digest.py
src/jobfinder/scoring/: __init__.py  combine.py  llm.py  rules.py
src/jobfinder/storage/: __init__.py  repository.py  snapshots.py  vector.py
systemd/: jobfinder.service  jobfinder.timer
tests/adapters/: test_apple_adapter.py  test_description_enrichment.py  test_generic_public_adapter.py  test_html_fallback_extractors.py  test_normalization_contract.py
tests/integration/: test_pipeline_mocked.py
tests/unit/: test_candidate_summary.py  test_description_rendering.py  test_llm_parser.py  test_query_expansion.py  test_repository_dedup.py  test_rule_scoring.py  test_score_combiner.py
