[project]
name = "jobfinder"
version = "0.1.0"
description = "Local AI job finder agent with Ollama + LangChain/LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "httpx>=0.27.2",
  "langchain>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-ollama>=0.2.0",
  "langgraph>=0.2.39",
  "orjson>=3.10.7",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-dateutil>=2.9.0.post0",
  "pyyaml>=6.0.2",
  "sqlmodel>=0.0.22",
  "streamlit>=1.42.0",
  "tenacity>=9.0.0",
  "typer>=0.12.5",
  "faiss-cpu>=1.8.0.post1",
  "numpy>=2.1.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.4",
  "mypy>=1.11.2",
]
test = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
]

[project.scripts]
jobfinder = "jobfinder.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev", "test"]

[dependency-groups]
dev = [
  "ruff>=0.6.4",
  "mypy>=1.11.2",
]
test = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
mypy_path = "src"
